# note-grinder

./: README.md  pyproject.toml  shared_knowledge.md
.atl/: .skill-registry.cache.json  skill-registry.md
src/: clock.py  concept.py  distill.py  grammar.py  granular_note.py  markdown_document.py  mmx.py  notes.py  persistence.py  pipeline.py  processor.py  processor_main.py  processor_state.py  queue.py  supervisor.py  watcher.py
tests/: test_clock.py  test_concept.py  test_distill.py  test_grammar.py  test_granular_note.py  test_integration_processor.py  test_integration_watcher.py  test_markdown_document.py  test_mmx.py  test_notes.py  test_persistence.py  test_pipeline.py  test_processor.py  test_processor_main.py  test_processor_state.py  test_queue.py  test_supervisor.py  test_watcher.py
